# encore-python

./: .gitignore  README.md  pyproject.toml
src/encore_python/: __init__.py
src/encore_python/client/: __init__.py  encore.py  parsing.py
src/encore_python/types/: __init__.py  request.py  response.py  shared.py
