[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "encore_python"
description = "Python API wrapper for encore.us"
readme = "README.md"
keywords = ["sng", ".sng", "clone hero", "ch", "file", "sng-format", "sng-parse"]
license = {file = "LICENSE"}
version = "1.0.0"
requires-python = ">= 3.10"
dependencies = [
  "requests",
  "jsonobject"
]
authors = [
  {name = "Josh Mcdaniel", email = "80354972+joshrmcdaniel@users.noreply.github.com"},
]
classifiers = [
  "Development Status :: 3 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[tool.setuptools.packages.find]
where = ["src/"]
include = ["encore_python*"]