[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "encore_python"
description = "Python API wrapper for encore.us"
readme = "README.md"
keywords = ["sng", ".sng", "clone hero", "ch", "file", "sng-format", "sng-parse"]
license = {file = "LICENSE"}
version = "1.1.0"
requires-python = ">= 3.10"
dependencies = [
  "requests",
  "jsonobject",
  "sng-parser"
]
authors = [
  {name = "Josh Mcdaniel", email = "80354972+joshrmcdaniel@users.noreply.github.com"},
]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.urls]
homepage = "https://github.com/joshrmcdaniel/encore-python"

[tool.setuptools.packages.find]
where = ["src/"]
include = ["encore_python*"]